rework routeDTO mapping to create a result per unique start station and route