@@ -70,11 +70,11 @@ public class FrequencyResourceTest {
         GridPosition manAirportPosition = CoordinateTransforms.getGridPosition(airportStation.getLatLong());
 
         List<BoxWithFrequencyDTO> containsAirport = results.stream().
-                filter(item -> containsStation(manAirportPosition, item)).collect(Collectors.toList());
+                filter(item -> containsStation(manAirportPosition, item)).toList();
         assertEquals(1, containsAirport.size());
         BoxWithFrequencyDTO airportBox = containsAirport.get(0);
 
-        assertEquals(7, airportBox.getNumberOfStopcalls());
+        assertEquals(7*2, airportBox.getNumberOfStopcalls());
         List<LocationRefDTO> stops = airportBox.getStops();
         boolean airportStopPresent = stops.stream().anyMatch(stop -> stop.getId().equals(airportStation.getIdForDTO()));
         assertTrue(airportStopPresent);
